fix:scrollbar issue in workEx

--- a/app/globals.css
+++ b/app/globals.css
@@ -307,7 +307,7 @@ hr {
   gap:20px;
   width: 100%;
   height: 33vh;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   border-style: dashed;
   border-width:medium;
   border-color: var(--themeTextColor);
